comment uninstall packages

--- a/learn/009-CLI.ipynb
+++ b/learn/009-CLI.ipynb
@@ -73,7 +73,7 @@
     "!pipe uninstall -y -r requirements.txt\n",
     "\n",
     "# Uninstall all packages\n",
-    "!pip freeze | xargs pip uninstall -y\n"
+    "#!pip freeze | xargs pip uninstall -y\n"
    ]
   },
   {
